# broca

./: README.md
frontend/: package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  AppContext.jsx  ConfigView.jsx  ConfigView.module.css  DetailArea.jsx  DetailArea.module.css  Input.jsx  Input.module.css  SearchArea.jsx  SearchArea.module.css  VocabularyArea.jsx  VocabularyArea.module.css  WordList.jsx  WordList.module.css  index.css  index.jsx  tauri.js
src/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug.rs  entry.rs  main.rs  openai.rs  state.rs
