[package]
name = "broca"
version = "0.0.0"
description = "A Tauri App"
authors = ["Shi Yan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "fs-read-dir", "fs-read-file", "macos-private-api", "protocol-asset", "shell-open", "system-tray"] }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
directories = "4.0"
cocoa = "0.24"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
slugify = "0.1"
rusqlite = { version = "0.29", features = ["bundled","vtab","trace"] }
glob = "0.3"
aws-config = "0.55"
aws-types ="0.55"
aws-sdk-polly = "0.26"

#[[bin]]
#name = "debug"
#path = "src/debug.rs"
#test = false
#bench = false

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
